wacc/test/golden/syntaxErr.function.funcExpr2
# trying to call a function in a general expression

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin 
  int f (int x) is
    return 0
  end
  println "init x" ;
  int x = 2 ;
  while x > f(x) do
    println x ;
    x = x - 1
  done;
  println "finshed I guess"
end
	


In test/wacc_examples/invalid/syntaxErr/function/funcExpr2.wacc (line 17, column 14):
  unexpected "(x"
  expected "[", arithmetic operator, comparison operator, do, or logical operator
  >  int x = 2 ;
  >  while x > f(x) do
                ^^
  >    println x ;